Fix Loading Spinner not covering whole screen

--- a/client/src/shared/components/UIElements/LoadingSpinner.css
+++ b/client/src/shared/components/UIElements/LoadingSpinner.css
@@ -17,7 +17,7 @@
 }
 
 .loading-spinner__overlay {
-	height: 100vh;
+	height: 100%;
 	width: 100vw;
 	position: absolute;
 	top: 0;
